# receipt_scan

./: .gitignore  README.md  config.py  pyproject.toml  test.py
